Bug 156271 - SVG: incorrect text position when using array of dx
Summary: SVG: incorrect text position when using array of dx
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.0.2
Keywords: filter:svg
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-07-13 12:54 UTC by Xisco Faulí
Modified: 2023-07-26 12:42 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (153 bytes, image/svg+xml)
2023-07-13 12:54 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-07-13 12:54:38 UTC
Created attachment 188348 [details]
sample file

Steps to reproduce:
1. Open attached document

-> Compare it with another svg viewer

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5a6b938d324798433298ec7320c813c82ace4590
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 stragu 2023-07-14 00:11:26 UTC
Already jumbled top characters in:
Version 4.0.0.3 (Build ID: 7545bee9c2a0782548772a21bc84a9dcc583b89)
Comment 2 Commit Notification 2023-07-14 10:47:38 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a3d8f4079dc31a0496f86dc2f80eee9ad60415f5

tdf#156271: add dx shift on top of x position

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-07-26 12:42:23 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/5d67424b4137fdb6e69c64d2f89327fe4de7561b

tdf#156271: add dx shift on top of x position

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.