tdf#156271: add dx shift on top of x position

Change-Id: I61263a7fec2ec8236221a10f8cb730899c878f5f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154403
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>